Fix styling issues in CSS, part 2
The About section in trains page shouldn't have another scrollbar.

--- a/Transcyclopedia/sanfrancisco/train/css_assets/sf_trains.css
+++ b/Transcyclopedia/sanfrancisco/train/css_assets/sf_trains.css
@@ -119,6 +119,10 @@ body::after {
     overflow-y: auto;
 }
 
+#about_trains {
+    overflow-y: none;
+}
+
 #train_info, #train_routes, #train_departures, #train_alerts {
     margin-top: 10px;
     width: 95%;
